# MetaStage

./: README.md
contracts/: .gitignore  Cargo.toml  README.md  deploy.md
contracts/src/: consts.rs  error.rs  fund_creators.rs  lib.rs  nft.rs  registry.rs  tests.rs  token_receiver.rs  views.rs
