[package]
name = "metastage-contract"
version = "0.1.0"
authors = ["MetaStage-dev-members"]
edition = "2021"

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
thiserror = "1.0.26"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
anyhow = "1.0"
near-units = "0.2.0"
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.18.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
workspaces = { version = "0.6.0", features = ["unstable"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
